Updated bundle identifier to com.akvelon.dri.runscopetestios1

--- a/Info.plist
+++ b/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>XamarinDotnet5iOS</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.akvelon.dri.team-test</string>
+	<string>com.akvelon.dri.runscopetestios1</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
